--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:coverage": "react-scripts test --coverage",
+    "test:coverage": "react-scripts test --coverage --no-cache --watchAll",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
